syntax = "proto3";

package ppx.bmf;

enum Interpretation {
	HIGHER_IS_BETTER = 0;
	LOWER_IS_BETTER = 1;
}

message Range {
	double lower_bound = 1;
	double upper_bound = 2;
}

message MetricCounter {
	int64 value = 1;
}

message GaugeStatistics {
	double min = 1;
	double max = 2;
	double average = 3;
	double standard_deviation = 4;
	double time_ratio = 5;
}

message TimeSeriesEntry {
	double seconds = 1;
	double value = 2;
}

message MetricGauge {
	GaugeStatistics statistics = 1;
	repeated TimeSeriesEntry time_series = 2;
}

message Metric {
	string name = 1;
	string unit = 2;
	Interpretation interpretation = 3;
	Range expected_range = 4;

	oneof data {
		MetricCounter counter = 5;
		MetricGauge gauge = 6;
	}
}

message Run {
	string name = 1;
	repeated Metric metrics = 2;
}

message Report {
	string name = 1;
	repeated Run runs = 2;
}
